--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Meow</title>
     <link href="index.css" rel="stylesheet" />
     <link
-      href="http://fonts.googleapis.com/css?family=Allura|Frijole|Varela+Round"
+      href="https://fonts.googleapis.com/css?family=Allura|Frijole|Varela+Round"
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/tinycolor2@1.4.2/tinycolor.min.js"></script>
